csv/test/corpus/basic.txt
==================
Basic CSV parsing
==================
name,age,city
John,30,New York
Jane,25,London

---

(csv
  (row
    (first)
    (second)
    (third))
  (row
    (first)
    (second)
    (third))
  (row
    (first)
    (second)
    (third)))

================
Quoted fields
================
product,price,description
"Laptop",999.99,"High-performance, lightweight"
"Phone, Smart",599.00,"Latest model with 5G"

---

(csv
  (row
    (first)
    (second)
    (third))
  (row
    (first)
    (second)
    (third))
  (row
    (first)
    (second)
    (third)))

=============
Empty fields
=============
a,b,c,d
1,,3,
,2,,4

---

(csv
  (row
    (first)
    (second)
    (third)
    (fourth))
  (row
    (first)
    (third))
  (row
    (second)
    (fourth)))

========================
Mixed numeric types
========================
id,integer,float,negative
A,100,3.14,-42
B,0,0.001,-99.9

---

(csv
  (row
    (first)
    (second)
    (third)
    (fourth))
  (row
    (first)
    (second)
    (third)
    (fourth))
  (row
    (first)
    (second)
    (third)
    (fourth)))

======================================
Commas in quoted fields
======================================
code,description,notes
"A,B","Test, with comma","Multiple, commas, here"
C,"Normal text",D

---

(csv
  (row
    (first)
    (second)
    (third))
  (row
    (first)
    (second)
    (third))
  (row
    (first)
    (second)
    (third)))

======================================
Handling more than 7 columns
======================================
col1,col2,col3,col4,col5,col6,col7,col8,col9
a,b,c,d,e,f,g,h,i
1,2,3,4,5,6,7,8,9

---

(csv
  (row
    (first)
    (second)
    (third)
    (fourth)
    (fifth)
    (sixth)
    (seventh)
    (first)
    (second))
  (row
    (first)
    (second)
    (third)
    (fourth)
    (fifth)
    (sixth)
    (seventh)
    (first)
    (second))
  (row
    (first)
    (second)
    (third)
    (fourth)
    (fifth)
    (sixth)
    (seventh)
    (first)
    (second)))

======================================
Escaped quotes in quoted fields
======================================
id,name,comment
1,"John ""Johnny"" Doe","He said ""Hello"""
2,"Jane","""Quoted text"""

---

(csv
  (row
    (first)
    (second)
    (third))
  (row
    (first)
    (second)
    (third))
  (row
    (first)
    (second)
    (third)))
